feat: add template handlers and service
